--- a/views/landingadmin.hbs
+++ b/views/landingadmin.hbs
@@ -35,7 +35,7 @@
         <div class="card__info-hover">
         </div>
         <div class="card__img"></div>
-        <a href="#" class="card_link">
+        <a href="/admin/control" class="card_link">
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
