--- a/views/mantenedor.hbs
+++ b/views/mantenedor.hbs
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/mantenedor.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
@@ -17,9 +18,8 @@
 
 <body>
 
-    <nav> <a href="/">Home</a> <a href="/users/logout">Logout</a>
-        
-    </nav>
+    {{> navbar}}
+
 
 
 
@@ -42,48 +42,50 @@
             <input type="text" class="form-control" id="in_categoria" name="categoria" placeholder="Categoria">
         </div>
         <div class="col-auto">
-            <button id="btn_add"><span
-                                class="material-symbols-outlined">
-                                add
-                            </span></button>
-                        <button id="btn_edit" hidden><span
-                                class="material-symbols-outlined">
-                                edit
-                            </span></button>
+            <button id="btn_add"><span class="material-symbols-outlined">
+                    add
+                </span></button>
+            <button id="btn_edit" hidden><span class="material-symbols-outlined">
+                    edit
+                </span></button>
         </div>
     </form>
 
 
     <!-- Table -->
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Email</th>
-                <th>Contraseña</th>
-                <th>ID Categoria</th>
-                <th>Categoria</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each users}}
-            <tr id="tr-{{id}}">
-                <td>{{id}}</td>
-                <td>{{name}}</td>
-                <td>{{email}}</td>
-                <td>{{password}}</td>
-                <td>{{categoria_id}}</td>
-                <td>{{nombrecategoria}}</td>
-                <td><a href="#" onclick="editar({{id}})"><span class="material-symbols-outlined">edit</span></a></td>
-                <td><a href="/mantenedor/{{id}}?_method=delete"><span
-                            class="material-symbols-outlined">delete</span></a></td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Email</th>
+                    <th>Contraseña</th>
+                    <th>ID Categoria</th>
+                    <th>Categoria</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each users}}
+                <tr id="tr-{{id}}">
+                    <td>{{id}}</td>
+                    <td>{{name}}</td>
+                    <td>{{email}}</td>
+                    <td class="d-none d-sm-table-cell">{{password}}</td>
+                    <td>{{categoria_id}}</td>
+                    <td>{{nombrecategoria}}</td>
+                    <td><a href="#" onclick="editar({{id}})"><span class="material-symbols-outlined">edit</span></a>
+                    </td>
+                    <td><a href="/mantenedor/{{id}}?_method=delete"><span
+                                class="material-symbols-outlined">delete</span></a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
+
 
 
     <script>
@@ -91,16 +93,16 @@
             const tr = document.getElementById(`tr-${id}`);
             const td_name = tr.children[1].textContent;
             const td_email = tr.children[2].textContent;
-            const td_password= tr.children[3].textContent;
+            const td_password = tr.children[3].textContent;
             document.getElementById("in_name").value = td_name;
             document.getElementById("in_email").value = td_email;
-            document.getElementById("in_password").value= td_password;
+            document.getElementById("in_password").value = td_password;
             document.getElementById("btn_add").hidden = true;
             document.getElementById("btn_edit").hidden = false;
             const form = document.getElementById("formulario");
             form.action = `/mantenedor/${id}?_method=put`
             console.dir(form)
-            
+
         }
     </script>
 </body>
