--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -31,6 +31,35 @@
     <button id="location-btn" type="button" class="btn btn-primary">Usar mi localización</button>
     <div id="instructions"></div>
     
+    <div class="container">
+        <div class="row">
+          <div class="col"></div>
+          <nav class="navbar navbar-expand-lg bg-light col mt-4">
+            <div class="container-fluid">
+              <button class="navbar-toggler mx-auto pt-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="https://i.imgur.com/FkSgrI7.png" alt="Toggler Icon" width="65px">
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+                  <li class="nav-item">
+                    <a class="nav-link" id="toggleMarkers">Museos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">about</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <div class="col"></div>
+        </div>
+      </div>
    
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css" rel="stylesheet">    
