--- a/views/landingcolab.hbs
+++ b/views/landingcolab.hbs
@@ -20,7 +20,7 @@
                 <div class="card__info-hover">
                 </div>
                 <div class="card__img"></div>
-                <a href="/admin/control" class="card_link">
+                <a href="/mantenedor2" class="card_link">
                     <div class="card__img--hover"></div>
                 </a>
                 <div class="card__info">
