--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,10 +1,134 @@
-<h1>Profile</h1>
-<p>Name: {{ user.name }}</p>
-<p>Email: {{ user.email }}</p>
-<img src="/img/{{ user.id }}.jpg" alt="Avatar">
-<form action="/users/{{ user.id }}/avatar" method="POST" enctype="multipart/form-data">
-  <input type="file" name="avatar">
-  <button type="submit">Change Avatar</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
 
-{{!-- <img src="/img/1.jpg" alt="Avatar"> --}}
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/profile.css">
+  <title>Perfil</title>
+</head>
+
+<body>
+
+  {{> navbar}}
+
+  <div class="wrapper">
+    <div class="profile-card js-profile-card">
+      <div class="profile-card__img">
+        <img src="/img/{{ user.id }}.jpg" alt="Avatar">
+      </div>
+
+      <div class="profile-card__cnt js-profile-cnt">
+        <div class="profile-card__name">{{ user.name }}</div>
+        <div class="profile-card__txt"><strong>{{ user.email }}</strong></div>
+        {{!-- <div class="profile-card-loc">
+          <span class="profile-card-loc__icon">
+            <svg class="icon">
+              <use xlink:href="#icon-location"></use>
+            </svg>
+          </span>
+          <span class="profile-card-loc__txt">
+            Istanbul, Turkey
+          </span> --}}
+        </div>
+
+        {{!-- <div class="profile-card-inf">
+          <div class="profile-card-inf__item">
+            <div class="profile-card-inf__title">1598</div>
+            <div class="profile-card-inf__txt">Followers</div>
+          </div>
+
+          <div class="profile-card-inf__item">
+            <div class="profile-card-inf__title">65</div>
+            <div class="profile-card-inf__txt">Following</div>
+          </div>
+
+          <div class="profile-card-inf__item">
+            <div class="profile-card-inf__title">123</div>
+            <div class="profile-card-inf__txt">Articles</div>
+          </div>
+
+          <div class="profile-card-inf__item">
+            <div class="profile-card-inf__title">85</div>
+            <div class="profile-card-inf__txt">Works</div>
+          </div>
+        </div> --}}
+
+        {{!-- <div class="profile-card-social">
+          <a href="https://www.facebook.com/iaMuhammedErdem" class="profile-card-social__item facebook" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-facebook"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="https://twitter.com/iaMuhammedErdem" class="profile-card-social__item twitter" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-twitter"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="https://www.instagram.com/iamuhammederdem" class="profile-card-social__item instagram"
+            target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-instagram"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="https://www.behance.net/iaMuhammedErdem" class="profile-card-social__item behance" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-behance"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="https://github.com/muhammederdem" class="profile-card-social__item github" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-github"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="https://codepen.io/JavaScriptJunkie" class="profile-card-social__item codepen" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-codepen"></use>
+              </svg>
+            </span>
+          </a>
+
+          <a href="http://muhammederdem.com.tr/" class="profile-card-social__item link" target="_blank">
+            <span class="icon-font">
+              <svg class="icon">
+                <use xlink:href="#icon-link"></use>
+              </svg>
+            </span>
+          </a>
+
+        </div> --}}
+
+        <div class="profile-card-ctr">
+
+          <form action="/users/{{ user.id }}/avatar" method="POST" enctype="multipart/form-data">
+            <input type="file" name="avatar">
+            <button type="submit" class="profile-card__button button--orange">Change Avatar</button>
+          </form>
+
+        </div>
+      </div>
+
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+</html>
