--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -32,7 +32,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Editar
-                            Producto</h1>
+                            Ubicación</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="cont-edicion-productos">
@@ -66,28 +66,28 @@
                                             placeholder="Coordenadas" required>
                                     </div>
                                     <div class="form-group">
-                                        {{!-- <label for="in_categoria">Categoria:</label>
-                                        <input type="text" id="in_categoria" name="categoria" class="form-control"
-                                            placeholder="Categoria " required> --}}
-
+                                        <label for="in_categoria">Categoria:</label>
                                         <select class="form-select form-edit" id="in_categoria" name="categoria"
                                             placeholder="Categoria" required>
                                             <option value="">Seleccione un categoría</option>
                                             <option value="1">Museos</option>
                                             <option value="2">Parques y Plazas</option>
                                             <option value="3">Servicios</option>
+                                        </select>
                                     </div>
                                     <div class="form-group">
                                         <label for="in_creador">Creador:</label>
                                         <input type="text" id="in_creador" name="creador" class="form-control"
-                                            placeholder="Creador" required>
+                                            placeholder="Creador" required value="{{ user.id }}">
                                     </div>
-                                    {{!-- <button id="btn_add" class="btn btn-primary">
-                                        <span class="material-symbols-outlined">add</span>
-                                    </button> --}}
-                                    <button id="btn_edit" class="btn btn-secondary">
-                                        <span class="material-symbols-outlined">edit</span>
-                                    </button>
+
+                                    <div class="modal-footer">
+                                        <button id="btn_edit" class="btn btn-warning">
+                                            <span class="material-symbols-outlined">Editar</span>
+                                        </button>
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cancelar</button>
+                                    </div>
                                 </div>
 
                             </form>
@@ -96,25 +96,6 @@
                                 <!-- <button class="btn btn-outline-warning" onclick="modificarProducto(id)">Modificar</button> -->
                             </div>
                         </div>
-                        {{!-- <div class="cont-info-producto">
-                            <div class="info-producto">
-                                <h6>Información Actual</h6>
-                                <section class="seccion-info-producto">
-                                    <p><b>ID:</b> 8</p>
-                                    <p><b>Nombre:</b> "Hasta Pronto
-                                        Micro Dosis"</p>
-                                    <p><b>Precio:</b> $4.200</p>
-                                    <p><b>Link Imagen:</b>
-                                        "http://linkdelafoto.com/imagen.jpeg"</p>
-                                    <p><b>Categoria:</b> Clara</p>
-                                    <p><b>Cantidad en Stock:</b> 15</p>
-                                </section>
-                            </div>
-                        </div> --}}
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-warning" onclick="respaldoDB()">Guardar Cambios</button>
                     </div>
                 </div>
             </div>
@@ -160,76 +141,38 @@
                                             placeholder="Coordenadas" required>
                                     </div>
                                     <div class="form-group">
-                                        {{!-- <label for="in_categoria">Categoria:</label>
-                                        <input type="text" id="in_categoria" name="categoria" class="form-control"
-                                            placeholder="Categoria " required> --}}
-
+                                        <label for="in_categoria">Categoria:</label>
                                         <select class="form-select form-edit" id="in_categoria" name="categoria"
                                             placeholder="Categoria" required>
                                             <option value="">Seleccione un categoría</option>
                                             <option value="1">Museos</option>
                                             <option value="2">Parques y Plazas</option>
                                             <option value="3">Servicios</option>
+                                        </select>
                                     </div>
                                     <div class="form-group">
                                         <label for="in_creador">Creador:</label>
                                         <input type="text" id="in_creador" name="creador" class="form-control"
                                             placeholder="Creador" required value="{{ user.id }}">
                                     </div>
-                                    <button id="btn_add" class="btn btn-primary">
-                                        <span class="material-symbols-outlined">add</span>
-                                    </button>
-                                    <button id="btn_edit" class="btn btn-secondary" hidden>
-                                        <span class="material-symbols-outlined">edit</span>
-                                    </button>
+
+
+                                    <div class="modal-footer">
+                                        <button id="btn_add" class="btn btn-primary">
+                                            <span class="material-symbols-outlined">Agregar</span>
+                                        </button>
+                                        <button type="button" class="btn
+                                        btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                    </div>
+
                                 </div>
 
                             </form>
-                            <div class="btn-crear-modal">
-                                <button class="btn
-                                                btn-outline-warning" onclick="renderNuevoEjemplo()">Vista
-                                    Previa</button>
-                            </div>
+
                         </div>
-                        <div class="cont-card-ejemplo">
-                            <div class="col mb-5 card-ejemplo">
-                                <div class="card h-100">
-                                    <!-- Product image-->
-                                    <img id="img-ejemplo" src="https://dummyimage.com/300x300/dee2e6/6c757d.jpg"
-                                        alt="..." />
-                                    <!-- Product details-->
-                                    <div class="card-body p-3">
-                                        <div class="text-center">
-                                            <!-- Product name-->
-                                            <h5 class="fw-bolder" id="nombre-ejemplo">Nombre
-                                                Producto</h5>
-                                        </div>
-                                    </div>
-                                    <div class="card-footer p-4 pt-0
-                                                    border-top-0
-                                                    bg-transparent">
-                                        <!-- Product price-->
-                                        <p style="text-align:
-                                                        center;"><b id="precio-ejemplo">$5.000</b></p>
-                                        <p style="text-align:
-                                                        center;"><b id="stock-ejemplo">Stock:
-                                                15</b></p>
-                                        <div class="text-center"><button class="btn
-                                                            btn-outline-dark
-                                                            mt-auto" href="#" onclick="" disabled>Añadir
-                                                al Carrito</button></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn
-                                        btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button id="add-location-button" type="button" class="btn
-                                        btn-warning">Añadir
-                            Ubicación</button>
-                    </div>
+
                 </div>
             </div>
         </div>
