--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="btn-group">
           <a id="toggleMarkers" class="btn btn-primary active" aria-current="page">Museos</a>
-          <a href="#" class="btn btn-primary">Link</a>
+          <a id="" class="btn btn-primary">Parques y Plazas</a>
           <a href="#" class="btn btn-primary">Link</a>
         </div>
       </div>
@@ -42,7 +42,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
                   <li class="nav-item">
-                    <a class="nav-link" id="toggleMarkers">Museos</a>
+                    <a class="nav-link" id="toggleMarkers2">Museos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">about</a>
