--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -21,7 +21,7 @@
        
     <div class="container">
         <div class="btn-group">
-          <a id="toggleMarkers" class="btn btn-primary active" aria-current="page">Museos</a>
+          <a id="" class="btn btn-primary active" aria-current="page">Museos</a>
           <a id="" class="btn btn-primary">Parques y Plazas</a>
           <a href="#" class="btn btn-primary">Link</a>
         </div>
@@ -37,21 +37,21 @@
           <nav class="navbar navbar-expand-lg bg-light col mt-4">
             <div class="container-fluid">
               <button class="navbar-toggler mx-auto pt-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <img src="https://i.imgur.com/FkSgrI7.png" alt="Toggler Icon" width="65px">
+                <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/50/null/external-map-winter-travel-flaticons-lineal-color-flat-icons-2.png" alt="Toggler Icon" width="65px">
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
                   <li class="nav-item">
-                    <a class="nav-link" id="toggleMarkers2">Museos</a>
+                    <a class="nav-link" id="toggleMarkers">Museos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">about</a>
+                    <a class="nav-link" id="toggleMarkers2">Parques y Plazas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">portfolio</a>
+                    <a class="nav-link" id="toggleMarkers3">Servicios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">contact</a>
+                    <a class="nav-link" href="/users/logout">Salir</a>
                   </li>
                 </ul>
               </div>
