--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -18,17 +18,8 @@
     
     <div id="map"></div>
 
-       
-    <div class="container">
-        <div class="btn-group">
-          <a id="" class="btn btn-primary active" aria-current="page">Museos</a>
-          <a id="" class="btn btn-primary">Parques y Plazas</a>
-          <a href="#" class="btn btn-primary">Link</a>
-        </div>
-      </div>
-
-    <!-- <button  class="button">Museoss</button> -->
-    <button id="location-btn" type="button" class="btn btn-primary">Usar mi localización</button>
+      <!-- <button  class="button">Museoss</button> -->
+    <button id="location-btn" type="button" class="btn btn-primary btn-sm">Usar mi localización</button>
     <div id="instructions"></div>
     
     <div class="container">
