--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,8 +1,30 @@
-{{#> template}}
-<h1 class="bg-dark">Pagina no encontrada</h1>
-<main class="mainError"> 
-    <div class="contenedorError">
-    <img class="imgError" src="https://cdn-4.motorsport.com/images/amp/2jXqxAP6/s6/marshals-remove-the-car-of-cha.jpg" alt="">
-    </div>
-</main>
-{{/template}}
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+     <link rel="stylesheet" href="/css/error.css">
+    <title>Page Not Found :(</title>
+        
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    </head>
+    
+
+    <body>
+    
+    <div class="unicorn"></div>
+            
+    <div class="container">
+      
+        <div class="four-oh-four"><h1>404 Error</h1></div>
+              
+        <div class="warning">            
+            <h2>"All those moments will be lost in time, like tears in rain."</h2>
+            <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+            <a href="javascript:history.back()">Please go back to the previous page</a>
+        </div>
+
+        <div class="footer"><p class="copyright">&copy; 2013 Redfrost.com</p></div>        
+
+    </div><!-- /.container -->                             
+    </body>
+</html>
+
