--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -24,7 +24,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="/profile">Editar perfil</a></li>
-            <li><a class="dropdown-item" href="/users/logout">Logout</a></li>
+            <li><a class="dropdown-item" href="/users/logout" onclick="showAlert()">Logout</a></li>
           </ul>
         </li>
       </ul>
