--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylesA.css">
     <script src="https://kit.fontawesome.com/9bf55c7eb1.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Document</title>
 </head>
 
@@ -254,6 +255,7 @@
         }
 
     </script>
+    <script src="/js/alerts.js"></script>
 </body>
 
 </html>
