--- a/views/loginregistro.hbs
+++ b/views/loginregistro.hbs
@@ -84,7 +84,17 @@
             </form>
         </div>
     </div>
-
+    
+    <script>
+        // Check if there are no Sweet Alerts on the page
+        if (document.querySelectorAll('.swal2-container').length === 0) {
+            Swal.fire({
+                icon: 'success',
+                title: 'Registro Exitoso',
+                text: '¡Bienvenido(a)!',
+            });
+        }
+    </script>
 
 </body>
 
